# milvus_test

./: .env.example  .gitignore  API_调用文档.txt  README.md  get_models.py  models_list.json  pyproject.toml  rerank_debug_test.ipynb  rerank_test.py  test_custom_azure_api.py
src/milvus_test/: api.py  hybrid_query_4partition.py  hybrid_query_4partition_v2.py  hybrid_search_main.py  ingect_data_4partion.py  ingect_data_4partion_test.py  ingest_data.py  local_config copy.json  main.py  rerank_test.py  unified_ingest.py  unified_query.py
test_txt/: ai.txt  cpp.txt  machine_learning.txt  python.txt
tests/: test_api.py  test_api_chat.py  test_full_search_rerank.py  test_main copy.py  test_main.py  全量测试milvus.yml
tests/notebooks/: hybrid_query_4partition_test.ipynb  rerank_debug_test.ipynb
